--- a/CoreIdentity/Views/Home/LogIn.cshtml
+++ b/CoreIdentity/Views/Home/LogIn.cshtml
@@ -1,7 +1,29 @@
-﻿
+﻿@model CoreIdentity.ViewModels.LoginViewModel
 @{
     ViewData["Title"] = "LogIn";
 }
+<div class="row">
+    <div class="col-md-4 offset-md-4">
+        <h4>Üye Giris Formu</h4>
+        <hr />
+        <form asp-action="LogIn" method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control"/>
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password" class="control-label"></label>
+                <input asp-for="Password" class="form-control"/>
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <br/>
+            <div class="form-group">
+                <input type="submit" value="Giris Yap" class="btn btn-primary"/>
+            </div>
+        </form>
+    </div>
+</div>
 
-<h1>Burasi Login sayfasi</h1>
 
