PasswordReset and SendResetEmail

--- a/CoreIdentity/Views/Home/LogIn.cshtml
+++ b/CoreIdentity/Views/Home/LogIn.cshtml
@@ -30,6 +30,7 @@
                 <input type="submit" value="Giris Yap" class="btn btn-primary"/>
             </div>
         </form>
+        <a class="btn btn-link" asp-action="ResetPassword">Sifremi Unuttum</a>
     </div>
 </div>
 
