--- a/CoreIdentity/Views/Shared/_Layout.cshtml
+++ b/CoreIdentity/Views/Shared/_Layout.cshtml
@@ -6,12 +6,12 @@
     <title>@ViewBag.Title</title>
 
     <script src="~/lib/jquery/jquery.js"></script>
-    <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />  
+    <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
     <script src="~/lib/jquery-validate/jquery.validate.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js" ></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 </head>
 <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">LOGO</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
             </div>
         </div>
     </nav>
-    <div class="container">
+    <div class="container" style="margin-top: 10px">
         @RenderBody()
     </div>
 </body>
