--- a/CoreIdentity/Views/Member/Index.cshtml
+++ b/CoreIdentity/Views/Member/Index.cshtml
@@ -6,7 +6,7 @@
 <h3 class="text-center">Kullanici Bilgileri</h3>
 <div class="row">
     <div class="col-sm-3">
-        <img style="width: 165px" src="~/UserPicture/man.jpg"/>
+        <img style="width: 165px" src="@Model.Picture"/>
     </div>
     <div class="col-sm-9">
         <table class="table table-bordered table-striped">
@@ -21,6 +21,18 @@
             <tr>
                 <th>Telefon No</th>
                 <td>@Model.PhoneNumber</td>
+            </tr>
+            <tr>
+                <th>City</th>
+                <td>@Model.City</td>
+            </tr>
+            <tr>
+                <th>Dogum Tarihi</th>
+                <td>@Model.BirthDay.Value.ToShortDateString()</td>
+            </tr>
+            <tr>
+                <th>Cinsiyet</th>
+                <td>@Model.Gender</td>
             </tr>
         </table>
     </div>
