--- a/CoreIdentity/Views/Admin/Index.cshtml
+++ b/CoreIdentity/Views/Admin/Index.cshtml
@@ -1,31 +1,7 @@
-﻿@model List<AppUser>
+﻿
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Admin/_AdminLayout.cshtml";
 }
-
-<table class="table table-bordered table-striped">
-    <tr>
-        <td>User Id</td>
-        <td>User Name</td>
-        <td>Email</td>
-    </tr>
-    @if (Model.Count() == 0)
-    {
-        <tr>
-            <td colspan="3">Hicbir üye yoktur.</td>
-        </tr>
-    }
-    else
-    {
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@item.Id</td>
-                <td>@item.UserName</td>
-                <td>@item.Email</td>
-            </tr>
-        }
-    }
-</table>
+<h2>Admin Sayfasina Hosgeldiniz</h2>
 
