--- a/CoreIdentity/Views/Admin/Users.cshtml
+++ b/CoreIdentity/Views/Admin/Users.cshtml
@@ -11,6 +11,8 @@
         <td>User Id</td>
         <td>User Name</td>
         <td>Email</td>
+        <td>Roller</td>
+        <td>Rol Atama</td>
     </tr>
     @if (Model.Count() == 0)
     {
@@ -26,6 +28,8 @@
                 <td>@item.Id</td>
                 <td>@item.UserName</td>
                 <td>@item.Email</td>
+                <td user-roles="@item.Id"></td> @*Custom TagHelper kullaniyoruz*@
+                <td><a class="btn btn-success" asp-action="RolesAssign" asp-route-id="@item.Id">Rol Ata</a></td>
             </tr>
         }
     }
