--- a/CoreIdentity/Views/Member/_MemberLayout.cshtml
+++ b/CoreIdentity/Views/Member/_MemberLayout.cshtml
@@ -1,5 +1,4 @@
 ﻿<!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -24,6 +23,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="btn btn-info" aria-current="page" asp-controller="Admin" asp-action="Index">Admin Anasayfa</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-info" aria-current="page" asp-controller="Member" asp-action="Editor">Editor Anasayfa</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-info" aria-current="page" asp-controller="Member" asp-action="Manager">Manager Anasayfa</a>
                     </li>
                 </ul>
             </div>
