--- a/CoreIdentity/Views/_ViewImports.cshtml
+++ b/CoreIdentity/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper CoreIdentity.CustomTagHelpers.*,CoreIdentity 
+@*TagHelper'in NameSpace'sini, .*: icerisindeki tüm siniflari, uygulamanin ana namespace'si *@
+
 @using CoreIdentity.Models
 @using CoreIdentity.ViewModels
