--- a/CoreIdentity/Views/Admin/_AdminLayout.cshtml
+++ b/CoreIdentity/Views/Admin/_AdminLayout.cshtml
@@ -34,6 +34,7 @@
             </div>
             <div class="col-md-4">
                 <h3>Menü</h3>
+                <a class="btn btn-danger btn-block" asp-action="Claims" asp-controller="Admin">Üye Claims</a>
                 <a class="btn btn-danger btn-block" asp-action="Users" asp-controller="Admin">Üyeler</a>
                 <a class="btn btn-danger btn-block" asp-action="Roles" asp-controller="Admin">Roller</a>
                 <a class="btn btn-danger btn-block" asp-action="Logout" asp-controller="Member" asp-route-returnUrl="/Home/Index">Cikis Yap</a>
