--- a/CoreIdentity/Views/Member/_MemberLayout.cshtml
+++ b/CoreIdentity/Views/Member/_MemberLayout.cshtml
@@ -30,6 +30,9 @@
                     <li class="nav-item">
                         <a class="btn btn-info" aria-current="page" asp-controller="Member" asp-action="Manager">Manager Anasayfa</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="btn btn-danger" aria-current="page" asp-controller="Member" asp-action="AnkaraPage">Ankara Sayfasi</a>
+                    </li>
                 </ul>
             </div>
         </div>
