Claim Based Authentication - Scenario 2

--- a/CoreIdentity/Views/Member/AccessDenied.cshtml
+++ b/CoreIdentity/Views/Member/AccessDenied.cshtml
@@ -5,8 +5,8 @@
 
 <h1 class="text-center text-danger">403</h1>
 
-<div class="text-center text-warning mt-4">
+<div class="alert alert-danger text-center mt-4">
     <p class="lead">Erişiminiz Reddedilmiştir / Access Denied</p>
-    <p>Bu sayfadaki içeriklere erişim yetkiniz yoktur.</p>
-    <p>Erisim izni almak icin site yöneticisi ile görüsünüz.</p>
+    <p><b>@ViewBag.message</b></p>
+    <p>Erişim izni almak için site yöneticisi ile görüşünüz.</p>
 </div>
