--- a/CoreIdentity/Views/Member/_MemberLayout.cshtml
+++ b/CoreIdentity/Views/Member/_MemberLayout.cshtml
@@ -30,9 +30,6 @@
                     <li class="nav-item">
                         <a class="btn btn-info" aria-current="page" asp-controller="Member" asp-action="Manager">Manager Anasayfa</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="btn btn-danger" aria-current="page" asp-controller="Member" asp-action="AnkaraPage">Ankara Sayfasi</a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -44,10 +41,12 @@
                 @RenderBody()
             </div>
             <div class="col-md-4">
-                <h3>Menü</h3>
-                <a class="btn btn-info btn-block" asp-action="PasswordChange" asp-controller="Member">Sifre Degistirme</a>
+                <h3 class="text-center">Menü</h3>
+                <a class="btn btn-danger btn-block" aria-current="page" asp-controller="Member" asp-action="AnkaraPage">Ankara Sayfası</a>
+                <a class="btn btn-danger btn-block" aria-current="page" asp-controller="Member" asp-action="ViolencePage">Şiddet İçeren Sayfa</a>
+                <a class="btn btn-info btn-block" asp-action="PasswordChange" asp-controller="Member">Şifre Değiştirme</a>
                 <a class="btn btn-info btn-block" asp-action="UserEdit" asp-controller="Member">Bilgi Güncelleme</a>
-                <a class="btn btn-info btn-block" asp-action="Logout" asp-controller="Member" asp-route-returnUrl="/Home/Index">Cikis Yap</a>
+                <a class="btn btn-info btn-block" asp-action="Logout" asp-controller="Member" asp-route-returnUrl="/Home/Index">Çıkış Yap</a>
             </div>
         </div>
     </section>
