Claim Based Authentication - Scenario 3

--- a/CoreIdentity/Views/Member/_MemberLayout.cshtml
+++ b/CoreIdentity/Views/Member/_MemberLayout.cshtml
@@ -44,6 +44,7 @@
                 <h3 class="text-center">Menü</h3>
                 <a class="btn btn-danger btn-block" aria-current="page" asp-controller="Member" asp-action="AnkaraPage">Ankara Sayfası</a>
                 <a class="btn btn-danger btn-block" aria-current="page" asp-controller="Member" asp-action="ViolencePage">Şiddet İçeren Sayfa</a>
+                <a class="btn btn-danger btn-block" aria-current="page" asp-controller="Member" asp-action="ExchangeRedirect">Borsa Bilgileri Sayfası</a>
                 <a class="btn btn-info btn-block" asp-action="PasswordChange" asp-controller="Member">Şifre Değiştirme</a>
                 <a class="btn btn-info btn-block" asp-action="UserEdit" asp-controller="Member">Bilgi Güncelleme</a>
                 <a class="btn btn-info btn-block" asp-action="Logout" asp-controller="Member" asp-route-returnUrl="/Home/Index">Çıkış Yap</a>
