--- a/CoreIdentity/Views/Home/LogIn.cshtml
+++ b/CoreIdentity/Views/Home/LogIn.cshtml
@@ -13,23 +13,25 @@
                 <input asp-for="Email" class="form-control"/>
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <br/>
+     
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control"/>
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <br/>
+      
             <div class="form-group">
                 <label asp-for="RememberMe">
                     <input asp-for="RememberMe" /> @Html.DisplayNameFor(m => m.RememberMe)
                 </label>
             </div>
-            <br/>
+
             <div class="form-group">
                 <input type="submit" value="Giris Yap" class="btn btn-primary"/>
             </div>
         </form>
+        <a class="btn btn-info btn-block" asp-action="FacebookLogin">Facebook ile giris yap</a>
+
         <a class="btn btn-link" asp-action="ResetPassword">Sifremi Unuttum</a>
     </div>
 </div>
