With Google Account Login

--- a/CoreIdentity/Views/Home/LogIn.cshtml
+++ b/CoreIdentity/Views/Home/LogIn.cshtml
@@ -31,7 +31,7 @@
             </div>
         </form>
         <a class="btn btn-info btn-block" asp-action="FacebookLogin">Facebook ile giris yap</a>
-
+        <a class="btn btn-info btn-block" asp-action="GoogleLogin">Google ile giris yap</a>
         <a class="btn btn-link" asp-action="ResetPassword">Sifremi Unuttum</a>
     </div>
 </div>
