--- a/CoreIdentity/Views/Home/LogIn.cshtml
+++ b/CoreIdentity/Views/Home/LogIn.cshtml
@@ -32,6 +32,7 @@
         </form>
         <a class="btn btn-info btn-block" asp-action="FacebookLogin">Facebook ile giris yap</a>
         <a class="btn btn-info btn-block" asp-action="GoogleLogin">Google ile giris yap</a>
+        <a class="btn btn-info btn-block" asp-action="MicrosoftLogin">Microsoft ile giris yap</a>
         <a class="btn btn-link" asp-action="ResetPassword">Sifremi Unuttum</a>
     </div>
 </div>
