--- a/CoreIdentity/Views/Admin/Users.cshtml
+++ b/CoreIdentity/Views/Admin/Users.cshtml
@@ -13,6 +13,7 @@
         <td>Email</td>
         <td>Roller</td>
         <td>Rol Atama</td>
+        <td>Şifre Değiştirme</td>
     </tr>
     @if (Model.Count() == 0)
     {
@@ -30,6 +31,7 @@
                 <td>@item.Email</td>
                 <td user-roles="@item.Id"></td> @*Custom TagHelper kullaniyoruz*@
                 <td><a class="btn btn-success" asp-action="RolesAssign" asp-route-id="@item.Id">Rol Ata</a></td>
+                <td><a class="btn btn-warning" asp-action="ResetUserPassword" asp-route-id="@item.Id">Şifre Yenileme</a></td>
             </tr>
         }
     }
